feat: canvas 사용하여 연속된 이미지 스크롤로 제어하기

--- a/project06/src/example02/index.html
+++ b/project06/src/example02/index.html
@@ -10,7 +10,7 @@
         width: 100%;
         height: 500vh;
         justify-content: center;
-        background-color: white;
+        background-color: black;
       }
       canvas {
         position: fixed;
@@ -21,7 +21,7 @@
         max-height: 100vh;
       }
       h1{
-        color: black;
+        color: white;
         font-size: 50px;
         position: relative;
         z-index: 2;
@@ -30,8 +30,8 @@
   </head>
   <body>
     <main id="main-02">
-        <canvas></canvas>
-        <h1>Flower</h1>
+      <canvas></canvas>
+      <h1>Flower</h1>
     </main>
-</body>
+  </body>
 </html>
