design: 예제3 기본 ui

--- a/project06/src/example03/index.html
+++ b/project06/src/example03/index.html
@@ -4,11 +4,23 @@
     <meta charset="utf-8" />
     <title>Scroll</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="css/example03.css">
+    <link rel="stylesheet" type="text/css" href="css/example03.css" />
   </head>
   <body>
     <main id="main-03">
-      
+      <section class="scroll-container">
+        <canvas id="scrollAnimation"></canvas>
+        <h1 id="title">gooodss</h1>
+      </section>
+      <section class="section" style="background-color: rgba(255,0,0, 0.5);">
+        <h2>element 1</h2>
+      </section>
+      <section class="section" style="background-color: rgba(0,255,0, 0.5);">
+        <h2>element 2</h2>
+      </section>
+      <section class="section" style="background-color: rgba(0,0,255, 0.5);">
+        <h2>element 3</h2>
+      </section>
     </main>
-</body>
+  </body>
 </html>
