feat: gsap tween (to, from, fromTo) 실습

--- a/project06/src/example03/index.html
+++ b/project06/src/example03/index.html
@@ -13,7 +13,9 @@
         <h1 id="title">gooodss</h1>
       </section>
       <section class="section" style="background-color: rgba(255,0,0, 0.5);">
-        <h2>element 1</h2>
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box3">3</div>
       </section>
       <section class="section" style="background-color: rgba(0,255,0, 0.5);">
         <h2>element 2</h2>
