feat: gsap tween function(play, restart, pause) 실습

--- a/project06/src/example03/index.html
+++ b/project06/src/example03/index.html
@@ -14,8 +14,9 @@
       </section>
       <section class="section" style="background-color: rgba(255,0,0, 0.5);">
         <div class="box1">1</div>
-        <div class="box2">2</div>
-        <div class="box3">3</div>
+        <button class="restart">restart</button>
+        <button class="start">start</button>
+        <button class="pause">pause</button>
       </section>
       <section class="section" style="background-color: rgba(0,255,0, 0.5);">
         <h2>element 2</h2>
