design: section ui 작업 (text, product)

--- a/project06/src/example04/index.html
+++ b/project06/src/example04/index.html
@@ -4,28 +4,35 @@
     <meta charset="utf-8" />
     <title>Scroll</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css"href="css/example04.css">
+    <link rel="stylesheet" type="text/css" href="css/example04.css" />
   </head>
   <body>
     <header>
       <strong class="logo">Logo</strong>
-      <strong class="user"
-        >By <a target="_blank" href="#">USER</a></strong
-      >
+      <strong class="user">By <a target="_blank" href="#">USER</a></strong>
     </header>
     <main id="main-04">
       <div class="scroll-container">
         <canvas id="scrollAnimation"></canvas>
       </div>
-      
-      <section class="section">
-        <h1 class="title">Goods</h1>
+
+      <section class="section"></section>
+      <section class="section text-section">
+        <div class="title">
+          <p>fast campus</p>
+          <h1>패스트 캠퍼스 굿즈 출시!!</h1>
+        </h1>
       </section>
-      <section class="section second">
-        <h1 class="title">1</h1>
-      </section>
-      <section class="section">
-        <h1 class="title">2</h1>
+      <section class="section product-section">
+        <div class="pviot">
+          <div class="product-explain">
+            <div class="line">
+              <span><div class="dot"></div></span>
+            </div>
+            <h3>통통한 배</h3>
+            <p>강아지 모양의 굿즈 인형은 사랑스러운 외모를 가지고 있습니다.</p>
+          </div>
+        </div>
       </section>
       <section class="section">
         <h1 class="title">3</h1>
@@ -34,5 +41,5 @@
         <h1 class="title">4</h1>
       </section>
     </main>
-</body>
+  </body>
 </html>
