design: icon section ui

--- a/project06/src/example05/index.html
+++ b/project06/src/example05/index.html
@@ -4,8 +4,13 @@
     <meta charset="utf-8" />
     <title>Scroll Event</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/example05.css">
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="css/example05.css" />
     <link rel="icon" href="assets/favicon.ico" />
   </head>
   <body>
@@ -30,7 +35,7 @@
       <div class="scroll-container">
         <canvas id="scrollAnimation"></canvas>
       </div>
-      
+
       <section class="section"></section>
 
       <section class="section text-section">
@@ -41,31 +46,43 @@
       </section>
 
       <section class="section product-section">
-        <div class="pviot">  
+        <div class="pviot">
           <div class="product-explain">
             <div class="line">
               <span><div class="dot"></div></span>
             </div>
             <h3>통통한 배</h3>
-            <p>강아지 모양의 굿즈 인형은 사랑스러운 외모와 부드러운 촉감으로 모든 연령대에게 인기가 많습니다</p>
+            <p>
+              강아지 모양의 굿즈 인형은 사랑스러운 외모와 부드러운 촉감으로 모든
+              연령대에게 인기가 많습니다
+            </p>
           </div>
         </div>
-        
       </section>
 
       <section class="section icon-section">
-
+        <div class="icon-container">
+          <img class="icon-1" src="assets/icon/heart.png" alt="icon1" />
+          <img class="icon-2" src="assets/icon/ten.png" alt="icon2" />
+          <img class="icon-3" src="assets/icon/heart.png" alt="icon3" />
+          <img class="icon-4" src="assets/icon/play.png" alt="icon4" />
+          <img class="icon-5" src="assets/icon/heart.png" alt="icon5" />
+        </div>
       </section>
 
       <section class="section img-section">
         <div class="img-container">
           <div class="top-description">
-            <img src="assets/icon/dog.png" alt="dog"/>
+            <img src="assets/icon/dog.png" alt="dog" />
             <div class="description">
               <h5>당신도 가질 수 있습니다</h5>
-              <p>강아지 모양의 굿즈 인형은 사랑스러운 외모와 부드러운 촉감으로 모든 연령대에게 인기가 많습니다.
-                특히, 이 인형은 귀여운 배 디자인으로 독특함을 더해, 보는 이로 하여금 행복감을 선사합니다.
-                어린이는 물론 성인들까지도 그 매력에 빠져들어 소장 욕구를 자극하는 아이템입니다.</p>
+              <p>
+                강아지 모양의 굿즈 인형은 사랑스러운 외모와 부드러운 촉감으로
+                모든 연령대에게 인기가 많습니다. 특히, 이 인형은 귀여운 배
+                디자인으로 독특함을 더해, 보는 이로 하여금 행복감을 선사합니다.
+                어린이는 물론 성인들까지도 그 매력에 빠져들어 소장 욕구를
+                자극하는 아이템입니다.
+              </p>
               <button>바로가기</button>
             </div>
           </div>
@@ -73,7 +90,7 @@
             <div class="card card1">
               <h4>1. 온라인 추첨</h4>
               <div class="content">
-                날짜 : 2024.4.5 ~ 2024.7.6<br/>
+                날짜 : 2024.4.5 ~ 2024.7.6<br />
                 인원 : 100명
               </div>
               <button class="button">온라인 추첨</button>
@@ -86,14 +103,11 @@
         <div class="container">
           <label class="footer-logo">
             <strong>FAST CAMPUS</strong>
-            <span>
-              (주) 데이원컴퍼니
-            </span>
+            <span> (주) 데이원컴퍼니 </span>
           </label>
           <p>
-            대표이사: 이강민
-            개인정보책임관리자: 이강민
-            사업자번호 : 810-86-00658<br/>
+            대표이사: 이강민 개인정보책임관리자: 이강민 사업자번호 :
+            810-86-00658<br />
             사무실 : 서울특별시 강남구 테헤란로 231, 센터필드 WEST 6층, 7층
             교육장 : 서울특별시 강남구 강남대로 364 미왕빌딩 10, 11층
           </p>
@@ -105,10 +119,13 @@
             <li><a href="javascript:void(0)">네번째</a></li>
           </ul>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quae deleniti ex porro. Exercitationem veritatis, incidunt, corporis sit earum labore dolores, in cum assumenda dolorum alias harum magnam officiis odit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+            quae deleniti ex porro. Exercitationem veritatis, incidunt, corporis
+            sit earum labore dolores, in cum assumenda dolorum alias harum
+            magnam officiis odit.
           </p>
         </div>
       </footer>
     </main>
-</body>
+  </body>
 </html>
