feat: footer 구현

--- a/project06/src/example05/index.html
+++ b/project06/src/example05/index.html
@@ -52,7 +52,7 @@
         <canvas id="scrollAnimation"></canvas>
       </div>
 
-      <section class="section"></section>
+      <section class="section" id="TOP"></section>
 
       <section class="section text-section">
         <div class="title">
@@ -130,7 +130,7 @@
           <div class="line"></div>
           <ul class="footer-nav">
             <li class="nav-1"><a href="javascript:void(0)">상단</a></li>
-            <li><a href="javascript:void(0)">스킵</a></li>
+            <li><a href="#TOP">스킵</a></li>
             <li><a href="javascript:void(0)">세번째</a></li>
             <li><a href="javascript:void(0)">네번째</a></li>
           </ul>
